--- a/secrets.yaml.example
+++ b/secrets.yaml.example
@@ -6,12 +6,9 @@ local_private_key: "/home/<user>/.ssh/id_rsa"
 # leave empty to have ssh open to the world or provide to lock down ssh to corp ip
 corporate_ip: "1.2.3.4"
 
-# The name of the network to deploy into - Options are "testnet" or "mainnet"
-network_name: "testnet"
-
 # The path to the keystore
 keystore_path: "/home/<user>/keystore"
 
 # The password to the keystore - Must escape special charectors - $ -> $$ for docker compose.
 keystore_password: "your password"
-
+# This should be omitted for production servers and entered in through a prompt. To do that, run the `make apply-basic` command at root.
