--- a/secrets.yaml.example
+++ b/secrets.yaml.example
@@ -11,4 +11,4 @@ keystore_path: "/home/<user>/keystore"
 
 # The password to the keystore - Must escape special charectors - $ -> $$ for docker compose.
 keystore_password: "your password"
-# This should be omitted for production servers and entered in through a prompt. To do that, run the `make apply-basic` command at root.
+# We will soon be replacing this.  You can delete your password from the file when you are done.
