--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,33 @@
 .idea
 
+# Terraform and terragrunt
 *.tfstate/
 *.tfstate.backup
 *.tfplan
-
 .terragrunt-cache/
 .terraform/
 
+# Sensitive config files
 account.tfvars
 secrets.yaml
 
-!{{cookiecutter.environment}}/account.tfvars
-!{{cookiecutter.environment}}/secrets.yaml
+# Other
+experiment
+notes.md
+bu
+Pipfile.lock
 
+# Cookiecutter
+config.yaml
+!{{cookiecutter.environment}}-tmp/account.tfvars
+
+
+# meta
 packer/
 ansible/
-modules
+modules/
 
-experiment
-
-notes.md
-
+dev
 
 #icon/bastion
 #icon/consul
