--- a/{{cookiecutter.environment}}/nodes.yaml
+++ b/{{cookiecutter.environment}}/nodes.yaml
@@ -1,4 +1,4 @@
-prep_module:
+prep-module:
   instance_type: "{{ cookiecutter.instance_type }}"
   ebs_volume_size: "{{ cookiecutter.ebs_volume_size }}"
   root_volume_size: "{{ cookiecutter.root_volume_size }}"
