--- a/nodes.yaml
+++ b/nodes.yaml
@@ -1,4 +1,15 @@
 prep-module:
   instance_type: "t3.small"
-  ebs_volume_size: 180
+  ebs_volume_size: 30
   root_volume_size: 15
+  additional_playbook_vars:
+    ansible_hardening: false
+
+prep-module-vpc:
+  instance_type: "t3.small"
+  ebs_volume_size: 30
+  root_volume_size: 15
+  additional_playbook_vars:
+    ansible_hardening: false
+
+
