--- a/secrets.yaml.example
+++ b/secrets.yaml.example
@@ -9,6 +9,6 @@ corporate_ip: "1.2.3.4"
 # The path to the keystore
 keystore_path: "/home/<user>/keystore"
 
-# The password to the keystore - Must escape special charectors - $ -> $$ for docker compose.
+# The password to the keystore - Must escape special characters - $ -> $$ for docker compose.
 keystore_password: "your password"
 # We will soon be replacing this.  You can delete your password from the file when you are done.
