--- a/{{cookiecutter.environment}}/global.yaml
+++ b/{{cookiecutter.environment}}/global.yaml
@@ -18,15 +18,19 @@ azs:
   - {{ cookiecutter.region }}b
   - {{ cookiecutter.region }}c
 
-# Don't worry about the rest of this for a basic node deployment
-domain_name: dev.insight-icon.net
-private_tld: icon.internal
+# In order to make DNS publicly available, you need to register a domain with AWS Route53 and enter the domain here.
+# If you have a domain from another registrar, you need to create a hosted zone in AWS with a subdomain, copy the name
+# servers, and enter them into your third party your registrar with an NS record to point to your created AWS zone.
+# If you don't want to use DNS, leave this blank (ie "").
+domain_name: "{{ cookiecutter.domain_name }}" # ie. dev.insight-icon.net
+# For consul and vault, we need to have an private DNS zone. This is set via <namespace>.internal convention.
+private_tld: {{ cookiecutter.namespace }}.internal
 
 # These enable the security group settings and later will enable the deployment of specific services
 # When bastion is enabled, you do not get public ssh access
-vault_enabled: false
+vault_enabled: true
 bastion_enabled: false
-monitoring_enabled: false
-hids_enabled: false
-logging_enabled: false
-consul_enabled: false
+monitoring_enabled: true
+hids_enabled: true
+logging_enabled: true
+consul_enabled: true
