--- a/{{cookiecutter.environment}}/nodes.yaml
+++ b/{{cookiecutter.environment}}/nodes.yaml
@@ -2,3 +2,14 @@ prep-module:
   instance_type: "{{ cookiecutter.instance_type }}"
   ebs_volume_size: "{{ cookiecutter.ebs_volume_size }}"
   root_volume_size: "{{ cookiecutter.root_volume_size }}"
+  additional_playbook_vars:
+    ansible_hardening: "{{ cookiecutter.ansible_hardening_enabled }}"
+
+prep-module-vpc:
+  instance_type: "{{ cookiecutter.instance_type }}"
+  ebs_volume_size: "{{ cookiecutter.ebs_volume_size }}"
+  root_volume_size: "{{ cookiecutter.root_volume_size }}"
+  additional_playbook_vars:
+    ansible_hardening: "{{ cookiecutter.ansible_hardening_enabled }}"
+
+
