--- a/{{cookiecutter.environment}}/secrets.yaml
+++ b/{{cookiecutter.environment}}/secrets.yaml
@@ -10,6 +10,6 @@ corporate_ip: "{{ cookiecutter.corporate_ip }}"
 # The path to the keystore
 keystore_path: "{{ cookiecutter.keystore_path }}"
 
-# The password to the keystore - Must escape special charectors - $ -> $$ for docker compose.
+# The password to the keystore - Must escape special characters - $ -> $$ for docker compose.
 keystore_password: "{{ cookiecutter.keystore_password }}"
 # We will soon be replacing this.  You can delete your password from the file when you are done.
